--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "keywords": [
-    "react",
-    "tool",
-    "cli"
-  ],
+  "keywords": ["react","tool", "cli"],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
