--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "lego-build.js",
   "bin": "lego-build.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "The OG Team",
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.1.2"
+  },
+  "devDependencies": {
+    "jest": "^29.0.2"
   }
 }
