--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "The OG Team",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.2",
-    "terminal-image": "^2.0.0"
+    "chalk": "^4.1.2"
   },
   "devDependencies": {
     "jest": "^29.0.2"
