--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -26,8 +26,8 @@ jobs:
           issue-message: |
             ## Thanks for taking the time to contribute by creating an issue
             #### It's great having you!.
-            This is an automated message, we'll give a response soon.
+            This is an automated message,you'll get a response from a maintainer soon.
           pr-message: |
             ## Thanks for taking the time to contribute by creating a pull request.
             Please hold on while your contributions are being reviewed.
-            This is an automated message, we'll give a response soon.
+            This is an automated message,you'll get a response from a maintainer soon.
