Updated .github folder

--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -15,10 +15,6 @@ jobs:
   welcome:
     runs-on: ubuntu-latest
     steps:
-      - name: run env
-        run: echo ${{ secrets.GENERAL_TOKEN }}
-      - name: run env2
-        run: echo $GENERAL_TOKEN
       - uses: actions/checkout@main
       - uses: EddieHubCommunity/gh-action-community/src/welcome@main
         with:
@@ -26,8 +22,8 @@ jobs:
           issue-message: |
             ## Thanks for taking the time to contribute by creating an issue
             #### It's great having you!.
-            This is an automated message, we'll give a response soon.
+            This is an automated message,you'll get a response from a maintainer soon.
           pr-message: |
             ## Thanks for taking the time to contribute by creating a pull request.
             Please hold on while your contributions are being reviewed.
-            This is an automated message, we'll give a response soon.
+            This is an automated message,you'll get a response from a maintainer soon.
