--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -15,6 +15,7 @@ jobs:
   welcome:
     runs-on: ubuntu-latest
     steps:
+     - uses: actions/checkout@main
      - uses: cinotify/github-action@main
        with:
           to: 'udochukwukaonyela@gmail.com'
