--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://lego-build.github.io",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "logie": "^1.0.10"
   }
 }
